Ãdded image to Hello World

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
   <h1>Tutorial Git&GitHub do W3Schools</h1>
+  <div><img src="img_hello_world.jpg" alt="Hello World from Space" style="width:100%;max-width:960px"></div>
   <p>Este é um arquivo exemplo para tutorial do W3Schools</p>
+  <p> uma nova linha</p>
 </body
 </html>
