updated index.html with emergency fix

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
   <h1>Tutorial Git&GitHub do W3Schools</h1>
   <p>Este é um arquivo exemplo para tutorial do W3Schools</p>
+  <p>Essa linha aqui é para mostrar como a função merge funciona.</p>
 </body
 </html>
