added new image

--- a/index.html
+++ b/index.html
@@ -2,15 +2,20 @@
 
 <html lang="pt-BR">
 <head>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="initial-scale=1, width=device-width">
   <link rel="stylesheet" href="bluestyle.css">
   <title>Tutorial Git e GitHub</title>
+
 </head>
 <body>
+
   <h1>Tutorial Git&GitHub do W3Schools</h1>
   <div><img src="img_hello_world.jpg" alt="Hello World from Space" style="width:100%;max-width:960px"></div>
   <p>Este é um arquivo exemplo para tutorial do W3Schools</p>
   <p> uma nova linha</p>
+  <div><img src="img_hello_git.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
+
 </body
 </html>
