Updated index.html with new paragraph and changed style position

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <html lang="pt-BR">
 <head>
 
+  <link rel="stylesheet" href="bluestyle.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="initial-scale=1, width=device-width">
-  <link rel="stylesheet" href="bluestyle.css">
   <title>Tutorial Git e GitHub</title>
 
 </head>
@@ -14,6 +14,7 @@
   <h1>Tutorial Git&GitHub do W3Schools</h1>
   <div><img src="img_hello_world.jpg" alt="Hello World from Space" style="width:100%;max-width:640px"></div>
   <p>Este é um arquivo exemplo para tutorial do W3Schools</p>
+  <p>Colocando uma info nova para o GitHub</p>
   <p>Essa linha aqui é para mostrar como a função merge funciona.</p>
   <div><img src="img_hello_git.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
 
